# edi_bottle_picking

./: .gitignore  CMakeLists.txt  package.xml
config/: constant_pose_config.yaml  conveyor_feeding_config.yaml  grasping_test_config.yaml
include/edi_bottle_picking/: constant_pose.h  constant_pose_utils.h  control_mode_switcher.h  conveyor_feeding.h  conveyor_feeding_utils.h  edi_bottle_picking.h  edi_bottle_picking_utils.h  grasping_test.h  grasping_test_utils.h
launch/: bottle_picking.launch.py  constant_pose.launch.py  conveyor_feeding.launch.py  grasping_test.launch.py  vacuum_gripper_bridge.launch.py  velocity_mode_bridge.launch.py
scripts/: best_grasp_pub.py  bringup_sim_stack.sh  edi_ros_env.sh  vacuum_gripper_bridge.py  velocity_mode_bridge.py
src/: constant_pose.cpp  constant_pose_utils.cpp  control_mode_switcher.cpp  conveyor_feeding.cpp  conveyor_feeding_utils.cpp  edi_bottle_picking.cpp  edi_bottle_picking_utils.cpp  grasping_test.cpp  grasping_test_utils.cpp
